# PyGamePneumaRL

./: .gitignore  .single-agent.py.kate-swp  README.md  args.py  camera.py  game.py  level.py  main.py  multi-agent.py  pneuma.py  requirements.txt  shell.nix  single-agent.py
Game/: level.py  main.py
Godot/: agent.py  args.py  default_bus_layout.tres  main.py  pneuma.sh  policy.py  project.godot  pyproject.toml  rllib_config.yaml  run_tests.sh  shell.nix  stable_baselines3_example.py
Godot/addons/godot_rl_agents/: sync.gd
Godot/addons/godot_rl_agents/controller/: ai_controller_2d.gd
Godot/code/: AIController2D.gd  bamboo.gd  killzone.gd  main.gd  player.gd  weapon.gd
Godot/logs/cleanrl/clean_rl_example__1__1715886195/: events.out.tfevents.1715886195.valanixos.440226.0
Godot/logs/rllib/: session_latest
Godot/logs/rllib/PPO_2024-05-15_08-21-40/: basic-variant-state-2024-05-15_08-21-40.json  experiment_state-2024-05-15_08-21-40.json  tuner.pkl
Godot/logs/rllib/PPO_2024-05-15_08-22-50/: basic-variant-state-2024-05-15_08-22-50.json  experiment_state-2024-05-15_08-22-50.json  tuner.pkl
Godot/logs/rllib/PPO_2024-05-15_09-05-02/: tuner.pkl
Godot/logs/rllib/PPO_2024-05-15_09-10-12/: tuner.pkl
Godot/logs/rllib/PPO_2024-05-15_09-19-31/: tuner.pkl
Godot/logs/rllib/PPO_2024-05-15_09-23-16/: experiment_state-2024-05-15_09-23-16.json  tuner.pkl
Godot/scenes/: attack.tscn  bamboo.tscn  camera.tscn  killzone.tscn  main.tscn  notice.tscn  player.tscn  weapon.tscn
Godot/script_templates/AIController/: controller_template.gd
Map/: Entities.csv  main_hub_Floor.csv  (+2 more)
(+224 files in other folders)
