[tool.poetry]
name = "pneumarl"
version = "0.1.0"
description = "Godot training env for MARL"
authors = ["Vasilis Valatsos <vasilvalat@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dm-tree = "^0.1.8"
typer = "^0.12.3"
scikit-image = "^0.23.2"
lz4 = "^4.3.3"
godot-rl = {url = "https://github.com/edbeeching/godot_rl_agents/archive/refs/heads/main.zip"}
pettingzoo = "^1.24.3"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
